<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shiran.searchphonetest.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="@color/colorTitleBg">

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/title"
         android:textSize="18sp"
         android:textColor="@color/colorWhite"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_query_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/phone_query"/>

    <Button
        android:id="@+id/btn_go_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/query_text"
        android:background="@drawable/bg_btn_shape"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/query_result"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

     <TextView
         android:id="@+id/text_query_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/phone_text"
         android:textSize="18sp"/>

     <TextView
         android:id="@+id/text_quert_province"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/province_text"
         android:textSize="18sp"/>

     <TextView
         android:id="@+id/text_quert_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/type_text"
         android:textSize="18sp"/>

     <TextView
         android:id="@+id/text_quert_carrier"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/carrier_text"
         android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>
